November 7 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Linux version improvements (now seems to function like a proper program)
	* Genedrix Vesana added to tunnel
	* Shopkeeper now offers his remaining money if he doesn't afford the full price

November 1 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Belt of carrying added

November 1 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Pets shouldn't eat the player's bodyparts.
	* Look stretch config option.
	* If a mine in the inventory is active, it should be displayed somehow.
	* Artifact vault.
	* Stethoscope info now shows HP and MaxHP
	* Daemon flesh is now poisones
	* Strong box now looks like a strong box (also edited its graphics)
	
October 30 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Item strength values are now somewhat more balanced
	* A few gcc warnings corrected
	* Many devirtualizations
	* Kahvi's sign pic now uses only two m-colors, one for the text and another for the rest
	* Optimized contentscript instantiations by removing the older optimizations that slowed
	  them down
	* Most inventory initializations are now script's responsibilities
	* Armor breaks again
	* Block capacity algorithm remade
	* Added script support for random squares inside rooms

October 29 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* fixed bug: (In Linux) push X-button, then cancel
	* magical whistle now acts as a normal whistle if used less than 1000 ticks after last use.
	* Smith added in Attnam
	* Spoiler warnings to all script files added
	* Snake corpses are poisones
	* sign (says "under construction" and IS under construction)

October 29 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* The extremely uninformative battle information of the panel removed
	* Added show battle info command ('B') which reveals them instead
	* Item pictures are now shown when looking at people
	* Worldmap generation is now faster
	* Added armor of great health which increases endurance but is heavier, clumsier