@@ -52,3 +52,4 @@ Ring of poison resistance, triangular key on a gravel floor.
 
 Fabrick belts and whips seem to not be clearly visible from a wooden parquet. (might have something to do with my red-green color blindness though)
 Small, medium and large chests (one is probably already done...)
+The picture in the menu should be cleaned from all compression related problems. (small color variation in the places)
