@@ -294,7 +294,7 @@
 #define BANANA_PEEL (ORGANIC_SUBSTANCE_ID + 3)
 #define KIWI_FLESH (ORGANIC_SUBSTANCE_ID + 4)
 #define PINEAPPLE_FLESH (ORGANIC_SUBSTANCE_ID + 5)
-#define FIBER (ORGANIC_SUBSTANCE_ID + 6)
+#define PLANT_FIBER (ORGANIC_SUBSTANCE_ID + 6)
 #define BONE (ORGANIC_SUBSTANCE_ID + 7)
 #define BREAD (ORGANIC_SUBSTANCE_ID + 8)
 
