@@ -1,3 +1,7 @@
+November 12 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Stacking system's GUI improved
+
 November 7 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* Linux version improvements (now seems to function like a proper program)
